--- a/Lab-07-starter/firmware/Lab-07-starter.X/nbproject/Makefile-genesis.properties
+++ b/Lab-07-starter/firmware/Lab-07-starter.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sun Oct 01 12:19:15 PDT 2023
-sam_e51_cnano.languagetoolchain.version=4.21
+#Wed Oct 18 10:06:11 PDT 2023
+sam_e51_cnano.languagetoolchain.version=4.30
 conf.ids=sam_e51_cnano
-host.id=2te2-taja-w7
-configurations-xml=98a93496a9b82343df32370984842662
+host.id=0
+configurations-xml=69a674c2b69f255ccd26e723069b8737
 sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=de2d3bc95a22a3f432c2e39f49efafbc
-sam_e51_cnano.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.21\\bin
+sam_e51_cnano.languagetoolchain.dir=/Applications/microchip/xc32/v4.30/bin
 sam_e51_cnano.Pack.dfplocation=
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=bcd6e5453a11ce86aaffd5305e838602
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
 sam_e51_cnano.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=08c658d7de75da11bc13fd254c7a7ad8
-proj.dir=C\:\\Users\\Vito\\Documents\\GitHub\\CISC-211-Lab-07-Unpack\\Lab-07-starter\\firmware\\Lab-07-starter.X
-host.platform=windows
+proj.dir=/Users/joeyc/Documents/GitHub/CISC-211-Lab-07-Unpack/Lab-07-starter/firmware/Lab-07-starter.X
+host.platform=mac
